add ollama and qdrant

--- a/VectorDataSampleApp.AppHost/VectorDataSampleApp.AppHost.csproj
+++ b/VectorDataSampleApp.AppHost/VectorDataSampleApp.AppHost.csproj
@@ -13,6 +13,8 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" Version="9.0.0" />
+    <PackageReference Include="Aspire.Hosting.Qdrant" Version="9.0.0" />
+    <PackageReference Include="CommunityToolkit.Aspire.Hosting.Ollama" Version="9.0.1-beta.83" />
   </ItemGroup>
 
 </Project>
